admin_base: Set menu z-index to fix weird overlapping issues with uniform

--- a/Instanssi/admin_base/static/admin_base/css/style.css
+++ b/Instanssi/admin_base/static/admin_base/css/style.css
@@ -13,7 +13,6 @@ p,ul,form,table,li { font-size: 95%; }
     padding-bottom: 8px;
     color: white;
     position: relative;
-    z-index: 1;
 }
 
 .admin_base_sizer {
